--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -59,27 +59,27 @@
                 <h2 class="upper mb text-center italic">join the community!</h2>
                 <div>
                     <label for="first_name">First Name: </label>
-                    <input type="text" name="first_name">
+                    <input type="text" name="first_name" class="border-l-none border-r-none border-t-none">
                 </div>
 
                 <div>
                     <label for="last_name">Last Name: </label>
-                    <input type="text" name="last_name">
+                    <input type="text" name="last_name" class="border-l-none border-r-none border-t-none">
                 </div>
 
                 <div>
                     <label for="email">Email: </label>
-                    <input type="text" name="email">
+                    <input type="text" name="email" class="border-l-none border-r-none border-t-none">
                 </div>
 
                 <div>
                     <label for="password">Create password: </label>
-                    <input type="password" name="password">
+                    <input type="password" name="password" class="border-l-none border-r-none border-t-none">
                 </div>
 
                 <div>
                     <label for="confirm_password">Confirm password: </label>
-                    <input type="password" name="confirm_password">
+                    <input type="password" name="confirm_password" class="border-l-none border-r-none border-t-none">
                 </div>
 
                 <div>
@@ -98,12 +98,12 @@
                 <h2 class="upper mb text-center italic">or sign-in</h2>
                 <div>
                     <label for="email">Email: </label>
-                    <input type="text" name="email">
+                    <input type="text" name="email" class="border-l-none border-r-none border-t-none">
                 </div>
 
                 <div>
                     <label for="password">Password: </label>
-                    <input type="password" name="password">
+                    <input type="password" name="password" class="border-l-none border-r-none border-t-none">
                 </div>
 
                 <div>
