--- a/flask_app/templates/block_files/footer.html
+++ b/flask_app/templates/block_files/footer.html
@@ -5,8 +5,10 @@
     <footer class="border-t-dash mt">
         <div class="flx row">
             
-            <h3>Current date and time:</h3>
-            <span id="datetime" class="ml"> </span>
+            <h3 class="neon-yellow">current date and time - - </h3>
+            <span class="ml">{</span>
+            <span id="datetime"></span>
+            <span>}</span>
         </div>
         {% block nav %} {% include 'block_files/nav.html' %} {% endblock nav %}
     </footer>
