--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -20,7 +20,7 @@
                 the Trmnl
             </h1>
             <h2>
-                % gossip by devs, for devs.
+                gossip by devs, for devs.
             </h2>
         </div>
 
