--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -57,16 +57,16 @@ html {
     font-size: 62.5%;
 }
 body *{
-    font-size: 1.18rem;
+    font-size: 1.14rem;
 }
 h1 {
-    font-size: 3.6rem;
+    font-size: 3rem;
 }
 h2 {
-    font-size: 1.18rem;
+    font-size: 1.14rem;
 }
 h3 {
-    font-size: 1.18rem;
+    font-size: 1.14rem;
 }
 h4 {
     font-size: 1rem;
@@ -92,6 +92,9 @@ a:hover{
 }
 thead{
     font-weight: 700;
+}
+nav a{
+    /* line-height: 4rem; */
 }
 /*******************************************/
 /*! FONT FAMILIES
@@ -263,8 +266,8 @@ thead{
 /*******************************************/
 nav a,
 footer a{
-    text-decoration: underline;
-    text-decoration-thickness: 15%;
+    /* text-decoration: underline; */
+    /* text-decoration-thickness: 15%; */
 }
 nav a:hover,
 footer a:hover{
