--- a/flask_app/templates/add_one.html
+++ b/flask_app/templates/add_one.html
@@ -43,8 +43,9 @@
                         <select name="post_category" id="post_category">
                             <option value="job lead">job lead</option>
                             <option value="boss goss">boss goss</option>
-                            <option value="tech tool goss">tech tool goss</option>
-                            <option value="mentor">mentor/mentee</option>
+                            <option value="tech tool goss">gear gab</option>
+                            <option value="mentor">maang leak</option>
+                            <option value="mentor">whistle blow</option>
                         </select>
                     </div>
                 </label>
