--- a/flask_app/templates/block_files/header.html
+++ b/flask_app/templates/block_files/header.html
@@ -7,7 +7,7 @@
 
         <!-- ! typing and blinking cursor w/css start -->
 
-        <div class="css-typing">
+        <div class="css-typing mt">
             <h2>Welcome, {{ this_user.first_name }}.</h2>
         </div>
 
