--- a/flask_app/templates/block_files/nav.html
+++ b/flask_app/templates/block_files/nav.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <body>
     {% block nav %}
-        <nav class="flx gap-2 mt">
+        <nav class="flx gap-2 mt blue">
 
             <!-- if view_one.html link to dashboard -->
             {% if filename=='dash.html' %}
