--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -54,43 +54,54 @@
 
 
     <main>
-        <div class="flx row gap-2 border-t-dash border-b-dash">
+        <div class="flx row gap-4 border-t-dash border-b-dash">
 
 
 
             <!-- REGISTRATION FORM -->
 
-            <form action="/register" method="post" class="flx col gap-1" id="reg">
-                <h2 class="text-center">join the community!</h2>
-                <div>
-                    <label for="first_name">First Name: </label>
-                    <input type="text" name="first_name" class="border-l-none border-r-none border-t-none">
+            <form action="/register" method="post" class="mt mb flx col gap-1" id="reg">
+                <div class="flx row">
+                    <div class="flx-1"></div>
+
+                    <div class="flx-2">
+                        <h2 class="text-center">join the community!</h2>
+                    </div>
                 </div>
 
-                <div>
-                    <label for="last_name">Last Name: </label>
-                    <input type="text" name="last_name" class="border-l-none border-r-none border-t-none">
+                <div class="flx row align-items-base">
+                    <label for="first_name" class="flx-1">First Name: </label>
+                    <input type="text" name="first_name" class="flx-2 border-l-none border-r-none border-t-none">
                 </div>
 
-                <div>
-                    <label for="email">Email: </label>
-                    <input type="text" name="email" class="border-l-none border-r-none border-t-none">
+                <div class="flx row align-items-base">
+                    <label for="last_name" class="flx-1">Last Name: </label>
+                    <input type="text" name="last_name" class="flx-2 border-l-none border-r-none border-t-none">
                 </div>
 
-                <div>
-                    <label for="password">Create password: </label>
-                    <input type="password" name="password" class="border-l-none border-r-none border-t-none">
+                <div class="flx row align-items-base">
+                    <label for="email" class="flx-1">Email: </label>
+                    <input type="text" name="email" class="flx-2 border-l-none border-r-none border-t-none">
                 </div>
 
-                <div>
-                    <label for="confirm_password">Confirm password: </label>
-                    <input type="password" name="confirm_password" class="border-l-none border-r-none border-t-none">
+                <div class="flx row align-items-base">
+                    <label for="password" class="flx-1">Create password: </label>
+                    <input type="password" name="password" class="flx-2 border-l-none border-r-none border-t-none">
                 </div>
 
-                <div>
-                    <button type="submit">
-                        create account
-                    </button>
+                <div class="flx row align-items-base">
+                    <label for="confirm_password" class="flx-1">Confirm password: </label>
+                    <input type="password" name="confirm_password" class="flx-2 border-l-none border-r-none border-t-none">
+                </div>
+
+                <div class="flx row">
+                    <div class="flx-1"></div>
+
+                    <div class="flx-2">
+                        <button type="submit">
+                            create account
+                        </button>
+                    </div>
                 </div>
             </form>
             <!-- FORM END REGISTRATION-->
@@ -99,21 +110,34 @@
 
             <!-- LOGIN FORM -->
 
-            <form action="/login" method="post" class="flx col gap-1" id="login">
-                <h2 class="text-center">or sign-in</h2>
-                <div>
-                    <label for="email">Email: </label>
-                    <input type="text" name="email" class="border-l-none border-r-none border-t-none">
+            <form action="/login" method="post" class="border-l-dash mt mb pd-l-20 flx col gap-1" id="login">
+                <div class="flx row">
+                    <div class="flx-1"></div>
+
+                    <div class="flx-2">
+                        <h2 class="text-center">or sign-in</h2>
+                    </div>
                 </div>
 
-                <div>
-                    <label for="password">Password: </label>
-                    <input type="password" name="password" class="border-l-none border-r-none border-t-none">
+                <div class="flx row align-items-base">
+                    <label for="email" class="flx-1">Email: </label>
+                    <input type="text" name="email" class="flx-2 border-l-none border-r-none border-t-none">
                 </div>
 
-                <div>
-                    <button type="submit" >login</button>
+                <div class="flx row align-items-base">
+                    <label for="password" class="flx-1">Password: </label>
+                    <input type="password" name="password" class="flx-2 border-l-none border-r-none border-t-none">
                 </div>
+
+
+                <div class="flx row">
+                    <div class="flx-1"></div>
+
+                    <div class="flx-2">
+                        <button type="submit" >login</button>
+                    </div>
+                </div>
+
             </form>
             <!-- FORM LOGIN END -->
 
