improved layouts and fixed heights with scrolling, styled scrollbars

--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -24,7 +24,7 @@
             <h1>
                 the Trmnl
             </h1>
-            <h2>
+            <h2 class="mt">
                 gossip for devs, by devs.
             </h2>
         </div>
