--- a/flask_app/templates/view_one.html
+++ b/flask_app/templates/view_one.html
@@ -17,7 +17,7 @@
 
 
     <main>
-        <div class="flx col gap-3 ">
+        <div class="flx col gap-3 main-height">
 
             <div class="flx row align-items-base gap-5">
 
