--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -86,7 +86,6 @@ a{
 }
 button,
 .btn,
-nav a:hover,
 a:hover{
     font-weight: 700;
 }
@@ -144,7 +143,9 @@ table{
     align-items: center;
 }
 td{
-    text-wrap:balance;
+    max-width: 170px;
+    text-wrap:nowrap;
+    overflow: hidden;
 }
 /*******************************************/
 /*! BACKGROUND COLORS
@@ -159,7 +160,8 @@ textarea{
 }
 button,
 .btn{
-    background-color: #0f0f0f;
+    background-color: #484848;
+    /* background-color: #0f0f0f; */
     /* background-color: #ff00c843; */
 }
 button:hover,
@@ -196,6 +198,9 @@ button:hover,
 nav a,
 a{
     color: inherit;
+}
+nav a:hover{
+    color: #fff;
 }
 thead{
     color: #ff0000;
@@ -369,13 +374,15 @@ button,
 .btn{
     width: 100%;
 }
-#login,
 #reg{
-    width: 50%;
+    width: 60%;
+}
+#login{
+    width: 40%;
 }
 .big-section{
     /* overflow: hidden; */
-    /* width: 600px; */
+    width: 600px;
 }
 /* .half-section{
     width: 50%;
@@ -658,30 +665,23 @@ table {
   width: 100%;
   height: 1.5em; /* don't forget to set the height! */
 }
-
-
-/* ===== Scrollbar CSS ===== */
-  /* Firefox */
+/*******************************************/
+/*! CUSTOM SCROLLBAR
+/*******************************************/
+/* Firefox */
 * {
     scrollbar-width: thin;
     scrollbar-color: #ae00ff;
 }
-
 /* Chrome, Edge, and Safari */
 ::-webkit-scrollbar {
     width: 6px;
 }
-
 ::-webkit-scrollbar-track {
     background: #000000;
 }
-
 ::-webkit-scrollbar-thumb {
     background-color: #ae00ff;
     border-radius: 0px;
     border: 0px none #000000;
 }
-
-/*******************************************/
-/*! CUSTOM SELECT MENU/ DROPDOWN
-/*******************************************/
