--- a/flask_app/templates/dash.html
+++ b/flask_app/templates/dash.html
@@ -44,12 +44,10 @@
                     {% for post in othersPosts %}
                         <tr class="glow">
                             <td>
-                                {{ post.creator.first_name }} {{ post.creator.last_name }} spilled their T
+                                {{ post.creator.first_name }} {{ post.creator.last_name }} spilled T
                             </td>
                             <td class="pd-l-10">
-                                <a href="/user/{{ this_user.id }}/goss/{{ post.id }}/view" class="rowlink">
-                                    {{ post.created_at.strftime("%m-%d-%Y") }} at {{ post.created_at.strftime("") }} - -
-                                </a>
+                                <a href="/user/{{ this_user.id }}/goss/{{ post.id }}/view" class="rowlink">{{ post.created_at.strftime("%m-%d-%Y") }}</a>
                             </td>
                             <td class="pd-l-10">
                                 {{ post.post_title }}
