added chatgpt generated post content to dummy.txt

--- a/flask_app/templates/view_one.html
+++ b/flask_app/templates/view_one.html
@@ -38,11 +38,8 @@
                     <span class="italic gray">edited</span>
                 {% endif %}
             </div>
-
-            <h2>type of goss: {{ post.post_category }}</h2>
-
             <p>{{ post.post_text }}</p>
-
+            <h2># {{ post.post_category }}</h2>
 
         </div>
         
