fixed select menu on add and edit forms

--- a/flask_app/templates/add_one.html
+++ b/flask_app/templates/add_one.html
@@ -47,9 +47,11 @@
                         <select name="post_category" id="post_category">
                             <option value="job lead">job lead</option>
                             <option value="boss goss">boss goss</option>
-                            <option value="tech tool goss">gear gab</option>
-                            <option value="mentor">maang leak</option>
-                            <option value="mentor">whistle blow</option>
+                            <option value="gear gab">gear gab</option>
+                            <option value="maang leak">maang leak</option>
+                            <option value="whistle blow">whistle blow</option>
+                            <option value="mentor/mentee">mentor/mentee</option>
+                            <option value="tech seen on tv">tech seen on tv</option>
                         </select>
                     </div>
                 </label>
