--- a/flask_app/templates/edit_one.html
+++ b/flask_app/templates/edit_one.html
@@ -46,8 +46,10 @@
                         <select name="post_category" id="post_category">
                             <option value="job lead" {% if post.post_category == 'job lead' %} selected="selected" {% endif %}>job lead</option>
                             <option value="boss goss" {% if post.post_category == 'boss goss' %} selected="selected" {% endif %}>boss goss</option>
-                            <option value="tech tools" {% if post.post_category == 'tech tools' %} selected="selected" {% endif %}>tech tools</option>
-                            <option value="mentor" {% if post.post_category == 'mentor' %} selected="selected" {% endif %}>mentor/mentee</option>
+                            <option value="gear gab" {% if post.post_category == 'tech tools' %} selected="selected" {% endif %}>gear gab</option>
+                            <option value="maang leak" {% if post.post_category == 'maang leak' %} selected="selected" {% endif %}>maang leak</option>
+                            <option value="mentor/mentee" {% if post.post_category == 'mentor/mentee' %} selected="selected" {% endif %}>mentor/mentee</option>
+                            <option value="tech seen on tv" {% if post.post_category == 'tech seen on tv' %} selected="selected" {% endif %}>tech seen on tv</option>
                         </select>
                     </div>
                 </label>
